<resources>
    <string name="app_name">The Guardian News</string>
    <string name="empty_state">No articles found.</string>
    <string name="no_connection">No internet connection.</string>

    <string name="placeholder_title">Lorem Ipsum Dolor Sit Amet </string>
    <string name="placeholder_section">Section</string>
    <string name="placeholder_author">John Doe</string>
    <string name="placeholder_date">2018.06.20</string>

    <string name="by">by </string>
    <string name="thumbnail">Article image</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Articles Settings</string>

    <string name="settings_num_articles_label">Number of articles to show</string>
    <string name="settings_num_articles_key" translatable="false">num_articles</string>
    <string name="settings_num_articles_default" translatable="false">10</string>

    <!-- Strings For Section preferences [CHAR LIMIT=30] -->
    <string name="settings_sections_label">Show Sections</string>
    <string name="settings_sections_key" translatable="false">show_sections</string>
    <string name="settings_sections_default" translatable="false">@string/settings_sections_all_value</string>

    <!-- Label for settings ALL option [CHAR LIMIT=20] -->
    <string name="settings_sections_all_label">ALL</string>
    <string name="settings_sections_all_value" translatable="false">all</string>

    <!-- Label for settings Business option [CHAR LIMIT=20] -->
    <string name="settings_sections_business_label">Business</string>
    <string name="settings_sections_business_value" translatable="false">business</string>

    <!-- Label for settings Football option [CHAR LIMIT=20] -->
    <string name="settings_sections_football_label">Football</string>
    <string name="settings_sections_football_value" translatable="false">football</string>
</resources>
