<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@null"
    android:dividerHeight="@dimen/size_0"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/size_S"
    android:paddingEnd="@dimen/size_M"
    android:paddingLeft="@dimen/size_M"
    android:paddingRight="@dimen/size_M"
    android:paddingStart="@dimen/size_M"
    android:paddingTop="@dimen/size_S">

    <ImageView
        android:contentDescription="@string/thumbnail"
        android:id="@+id/thumbnail_view"
        android:layout_width="@dimen/size_img_width"
        android:layout_height="@dimen/size_img_height"
        android:layout_gravity="center_vertical"
        android:background="@color/colorImageBG" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_M"
        android:layout_marginStart="@dimen/size_M"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorSectionBG"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingEnd="@dimen/size_XS"
            android:paddingLeft="@dimen/size_XS"
            android:paddingRight="@dimen/size_XS"
            android:paddingStart="@dimen/size_XS"
            android:paddingTop="@dimen/size_XXS"
            android:paddingBottom="@dimen/size_XXS"
            android:textAllCaps="true"
            android:textColor="@color/colorSectionText"
            android:textSize="@dimen/size_text_section"
            android:textStyle="bold"
            tools:text="@string/placeholder_section" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/size_text_title"
            tools:text="@string/placeholder_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/by_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingEnd="@dimen/size_XS"
                android:paddingRight="@dimen/size_XS"
                android:paddingStart="@dimen/size_0"
                android:paddingLeft="@dimen/size_0"
                android:textColor="@color/colorDateText"
                android:textSize="@dimen/size_text_details"
                tools:text="@string/by"
                android:text="@string/by"/>

            <TextView
                android:id="@+id/author_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAllCaps="true"
                android:textColor="@color/colorDateText"
                android:textSize="@dimen/size_text_details"
                android:textStyle="bold"
                tools:text="@string/placeholder_author" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/colorDateText"
                android:textSize="@dimen/size_text_details"
                tools:text="@string/placeholder_date" />



        </LinearLayout>

    </LinearLayout>

</LinearLayout>